# paichat

./: .gitignore  LICENSE  README.md  pyproject.toml
paichat/: __init__.py  config.py  main.py  openchat.py  prompt.py
